// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox add className 1`] = `
<input
  checked={false}
  className="css-1fiwpa4-checkboxClass foo"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Checkbox checked 1`] = `
<input
  checked={true}
  className="css-1fiwpa4-checkboxClass"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Checkbox empty 1`] = `
<input
  checked={false}
  className="css-1fiwpa4-checkboxClass"
  onChange={[Function]}
  type="checkbox"
/>
`;
